--- a/flexbox/flexbox.html
+++ b/flexbox/flexbox.html
@@ -9,12 +9,11 @@
         <div class="menu-container">
             <div class="menu">
                 <div class="date">Aug 14, 2016</div>
-                <div class="links">
-                    <div class="signup">Sign Up</div>
-                    <div class="login">Login</div>
-                </div>
+                <div class="signup">Sign Up</div>
+                <div class="login">Login</div>
             </div>
         </div>
+        >
         <div class="header-container">
             <div class="header">
                 <div class="subscribe">Subscribe &#9662;</div>
@@ -40,6 +39,11 @@
                     <img src="images/five.svg" />
                 </div>
             </div>
+        </div>
+        <div class="footer">
+            <div class="footer-item footer-one"></div>
+            <div class="footer-item footer-two"></div>
+            <div class="footer-item footer-three"></div>
         </div>
     </body>
 </html>
