--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -21,6 +21,28 @@
                     <button>Sign&nbsp;Up</button>
                 </section>
                 <img src="https://placehold.co/500x250" alt="placeholder">
-        <div>
+            </div>
+        </div>
+        <div class="information">
+            <h2>Some random information.</h2>
+            <div class="cards">
+                <div class="card">
+                    <img src="https://placehold.co/150x150" alt="placeholder">
+                    <p>this is some subtext under an illustration or an image</p>
+                </div>
+                <div class="card">
+                    <img src="https://placehold.co/150x150" alt="placeholder">
+                    <p>this is some subtext under an illustration or an image</p>
+                </div>
+                <div class="card">
+                    <img src="https://placehold.co/150x150" alt="placeholder">
+                    <p>this is some subtext under an illustration or an image</p>
+                </div>
+                <div class="card">
+                    <img src="https://placehold.co/150x150" alt="placeholder">
+                    <p>this is some subtext under an illustration or an image</p>
+                </div>
+            </div>
+        </div>
     <body>
 </html>
