--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -44,5 +44,22 @@
                 </div>
             </div>
         </div>
+        <div class="inspirational">
+            <div class="quote">
+                <p class="quote-text">This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+                <p class="thor">-Thor, God of Thunder</p>
+            </div>
+        </div>
+        <div class="call">
+            <div class="action">
+                <div class="left">
+                    <h3>Call to action! It's time!</h3>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div class="right">
+                    <button>Sign&nbsp;Up</button>
+                </div>
+            </div>
+        </div>
     <body>
 </html>
