--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -61,5 +61,7 @@
                 </div>
             </div>
         </div>
+        <div class="footer">
+            <h5>Copyright &#169 The Odin Project 2024</h5>
     <body>
 </html>
