--- a/rock_paper_scissors/index.html
+++ b/rock_paper_scissors/index.html
@@ -4,8 +4,15 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
+        <div class="results"></div>
+        <div class="container">
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+        </div>
         <script src="main.js"></script>
     </body>
 </html>
