--- a/rock_paper_scissors/index.html
+++ b/rock_paper_scissors/index.html
@@ -7,11 +7,13 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <div class="results"></div>
         <div class="container">
-            <button id="rock">Rock</button>
-            <button id="paper">Paper</button>
-            <button id="scissors">Scissors</button>
+            <div class="results">PLACEHOLDER TEXT</div>
+            <div class="buttons">
+                <button id="rock">Rock</button>
+                <button id="paper">Paper</button>
+                <button id="scissors">Scissors</button>
+            </div>
         </div>
         <script src="main.js"></script>
     </body>
