--- a/rock_paper_scissors/index.html
+++ b/rock_paper_scissors/index.html
@@ -7,14 +7,16 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <div class="container">
-            <div class="results">PLACEHOLDER TEXT</div>
-            <div class="buttons">
-                <button id="rock">Rock</button>
-                <button id="paper">Paper</button>
-                <button id="scissors">Scissors</button>
+        <section class="ui">
+            <div class="container">
+                <div class="results">PLACEHOLDER TEXT</div>
+                <div class="buttons">
+                    <button id="rock">Rock</button>
+                    <button id="paper">Paper</button>
+                    <button id="scissors">Scissors</button>
+                </div>
             </div>
-        </div>
+        </section>
         <script src="main.js"></script>
     </body>
 </html>
