Completed basic RPS UI functionality

--- a/rock_paper_scissors/index.html
+++ b/rock_paper_scissors/index.html
@@ -9,7 +9,11 @@
     <body>
         <section class="ui">
             <div class="container">
-                <div class="results">PLACEHOLDER TEXT</div>
+                <div class="winner"></div>
+                <div class="results">
+                    <div id="player">0</div>
+                    <div id="computer">0</div>
+                </div>
                 <div class="buttons">
                     <button id="rock">Rock</button>
                     <button id="paper">Paper</button>
